# skilltree

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: tests.yml
backend/: .dockerignore  .env  alembic.ini  dockerfile  dockerfile.dev  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 22b3bbda7c30_add_impl_contexts_table.py  8e5e5500c166_init_schema.py  90e8c9fef27f_add_abstract_nodes_kind.py  94916d19a7f7_add_abstract_memberships_table.py  afd23a9c97f8_split_nodes_into_abstract_nodes_impl_.py  c38c02a7307b_add_short_title_to_nodes.py
backend/app/: db.py  logging_config.py  main.py  models.py  schemas.py  seed.py
backend/app/logic/: graph.py
backend/app/routes/: graph_router.py
backend/app/services/: graph.py  graph_focus.py
backend/test/: conftest.py  helpers.py  test_focus_graph.py  test_focus_graph_builder.py
frontend/: .dockerignore  dockerfile  dockerfile.dev  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: GraphView.tsx
frontend/src/components/graph/: BoundaryPanel.tsx  EdgesPanel.tsx  GraphSidebar.tsx  GraphToolbar.tsx  Legend.tsx  NewNodePanel.tsx  SelectedNodeDetails.tsx  SelectionPanel.tsx  constants.ts  styles.ts
frontend/src/components/graphView/: GraphStage.tsx  GraphView.tsx  GraphViewLayer.tsx  index.ts  types.ts
frontend/src/components/graphView/cy/: anim.ts  events.ts  highlight.ts  route.ts  style.ts
frontend/src/components/graphView/transition/: enterFocus.ts  (+1 more)
frontend/src/lib/: api.ts
