[project]
name = "backend"
version = "0.1.0"
description = "Backend of the application"
requires-python = ">=3.12,!=3.14.1"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "networkx>=3.6.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
